# smartsnack

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  JS_CODE_REVIEW.md  README.md  REVIEW-JS.md  REVIEW.md  TODO.md  app.py  config.py  db.py  docker-compose.yml  entrypoint.sh  exceptions.py  extensions.py  helpers.py  js-review-report.md  migrations.py  package-lock.json  package.json  pyproject.toml  rebuildDocker.ps1  requirements-dev.txt  requirements.txt  test.ps1  translations.py  vitest.config.js
.claude/: CLAUDE.md
blueprints/: __init__.py  backup.py  bulk.py  categories.py  core.py  flags.py  images.py  ocr.py  ocr_settings.py  off.py  products.py  protein_quality.py  proxy.py  settings.py  stats.py  tags.py  translations.py  weights.py
scripts/: audit-stale-branches.sh  check_e2e_coverage.py
services/: backup_core.py  backup_service.py  bulk_service.py  category_service.py  category_weight_service.py  flag_service.py  image_service.py  import_service.py  llm_cleanup_service.py  llm_translate_service.py  nutrition_parser.py  ocr_core.py  ocr_locale_validator.py  ocr_service.py  ocr_settings_service.py  off_service.py  product_crud.py  product_duplicate.py  product_eans.py  product_filters.py  product_scoring.py  product_service.py  protein_quality_service.py  proxy_service.py  settings_service.py  stats_service.py  tag_service.py  translation_service.py  weight_service.py
templates/: base.html  index.html
tests/: conftest.py  mock_shape_validator.py  test_backup_service.py  test_blueprint_coverage.py  test_blueprints.py  (+68 more)
(+242 files in other folders)
