[project]
name = "smartsnack"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "flask==3.1.0",
    "gunicorn==23.0.0",
    "pyopenssl==24.3.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
